Se ha actualizado los precios y la forma en la que trabaja el cotizador con respecto a los precios
